Finaliza projeto calculadora IMC