@@ -1,6 +1,8 @@
 # Calculadora de IMC com JavaFX
 
-Aplicacao desktop para calcular o IMC, classificar o resultado e praticar os primeiros conceitos de JavaFX em um projeto util.
+Aplicacao desktop simples para calcular o IMC a partir do peso e da altura informados pelo usuario.
+
+![Demonstracao da Calculadora de IMC](./assets/calculadora-imc.gif)
 
 ## Repositorio
 
@@ -8,7 +10,7 @@ Aplicacao desktop para calcular o IMC, classificar o resultado e praticar os pri
 
 ## Objetivo
 
-Construir uma interface grafica simples para receber peso e altura, calcular o Indice de Massa Corporea e exibir a classificacao correspondente.
+Construir uma interface grafica com JavaFX para receber peso e altura, calcular o Indice de Massa Corporal e exibir o resultado formatado com duas casas decimais.
 
 ## Conceitos praticados
 
@@ -16,23 +18,43 @@ Construir uma interface grafica simples para receber peso e altura, calcular o I
 - Eventos em JavaFX
 - Controles de formulario
 - Validacao de entrada
-- Separacao entre regra de negocio e interface
+- Conversao de texto para numero
+- Tratamento de excecao com `NumberFormatException`
 
-## Funcionalidades planejadas
+## Funcionalidades
 
 - Campo para peso
 - Campo para altura
 - Botao para calcular
 - Exibicao do valor do IMC
-- Classificacao do resultado
 - Tratamento de entradas invalidas
+- Aceita valores decimais com ponto ou virgula
 
 ## Status
 
-Planejado.
+Concluido.
 
-## Evidencias para portfolio
+## Como funciona
 
-- Screenshot da tela principal
-- GIF ou video curto usando a calculadora
-- Explicacao breve da regra de calculo e da organizacao do codigo
+O calculo usa a formula:
+
+```txt
+IMC = peso / (altura * altura)
+```
+
+Os valores digitados nos campos de texto sao convertidos para `double`. Antes da conversao, a virgula e substituida por ponto para aceitar entradas como `80,5` e `1,84`.
+
+## Como executar
+
+No PowerShell, com a variavel `PATH_TO_FX` apontando para a pasta `lib` do JavaFX:
+
+```powershell
+javac --module-path "$env:PATH_TO_FX" --add-modules javafx.controls CalculadoraIMC.java
+java --module-path "$env:PATH_TO_FX" --add-modules javafx.controls CalculadoraIMC
+```
+
+## Arquivo principal
+
+```txt
+CalculadoraIMC.java
+```
